@@ -292,7 +292,7 @@ class RevelationApplet(object):
 			"autolock"		: True,
 			"autolock_timeout"	: 15,
 			"file"			: "",
-			"menuaction"		: "goto",
+			"menuaction"		: "show",
 		}
 
 		for key, value in defaults.items():
@@ -636,22 +636,22 @@ class Preferences(dialog.Utility):
 
 		self.section_menuaction = page.add_section("Menu Action")
 
-		# radio-button for goto
-		self.radio_goto = ui.RadioButton(None, "Go to account, if possible")
-		ui.config_bind(self.config, "menuaction", self.radio_goto, "goto")
-
-		self.tooltips.set_tip(self.radio_goto, "Open the account in an external application if possible, otherwise display it")
-		self.section_menuaction.append_widget(None, self.radio_goto)
-
 		# radio-button for show
-		self.radio_show = ui.RadioButton(self.radio_goto, "Display the account info")
+		self.radio_show = ui.RadioButton(None, "Display the account info")
 		ui.config_bind(self.config, "menuaction", self.radio_show, "show")
 
 		self.tooltips.set_tip(self.radio_show, "Display the account information")
 		self.section_menuaction.append_widget(None, self.radio_show)
 
+		# radio-button for goto
+		self.radio_goto = ui.RadioButton(self.radio_show, "Go to account, if possible")
+		ui.config_bind(self.config, "menuaction", self.radio_goto, "goto")
+
+		self.tooltips.set_tip(self.radio_goto, "Open the account in an external application if possible, otherwise display it")
+		self.section_menuaction.append_widget(None, self.radio_goto)
+
 		# radio-button for copy username/password
-		self.radio_copy = ui.RadioButton(self.radio_goto, "Copy username and password to clipboard")
+		self.radio_copy = ui.RadioButton(self.radio_show, "Copy username and password to clipboard")
 		ui.config_bind(self.config, "menuaction", self.radio_copy, "copy")
 
 		self.tooltips.set_tip(self.radio_copy, "Copy the username and password to the clipboard as a clipboard \"chain\"")
